# vllm-chat-service

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vllm_chat_service/: __init__.py  main.py
src/vllm_chat_service/api/: main.py  routes_chat.py
src/vllm_chat_service/core/: config.py  logging.py
src/vllm_chat_service/models/: schemas.py
src/vllm_chat_service/services/: vllm_client.py
tests/: conftest.py  test_chat.py
